stylesheet: Stop using :hover:active
This breaks on touch, use just :active instead.

--- a/src/stylesheet/widgets/_checks.scss
+++ b/src/stylesheet/widgets/_checks.scss
@@ -29,11 +29,13 @@ radio {
     box-shadow: inset 0 0 0 2px $trough_color;
   }
 
-  &:not(:checked):not(:indeterminate):hover {
-    @if $contrast == 'high' {
-      box-shadow: inset 0 0 0 2px gtkalpha(currentColor, .6);
-    } @else {
-      box-shadow: inset 0 0 0 2px $trough_hover_color;
+  &:not(:checked):not(:indeterminate) {
+    &:hover {
+      @if $contrast == 'high' {
+        box-shadow: inset 0 0 0 2px gtkalpha(currentColor, .6);
+      } @else {
+        box-shadow: inset 0 0 0 2px $trough_hover_color;
+      }
     }
 
     &:active {
@@ -52,11 +54,8 @@ radio {
     color: $fill_text_color;
     box-shadow: none;
 
-    &:hover {
-      background-image: image(gtkalpha(currentColor, .1));
-
-      &:active { background-image: image(transparentize(black, .8)); }
-    }
+    &:hover { background-image: image(gtkalpha(currentColor, .1)); }
+    &:active { background-image: image(transparentize(black, .8)); }
   }
 
   &:disabled {
